<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Editor">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@+id/method_processing_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/save"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/colorBackground"
            android:src="@drawable/save"
           />

        <ImageButton
            android:id="@+id/undo"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/colorBackground"
            android:src="@drawable/undo" />

        <ImageButton
            android:id="@+id/delete"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/colorBackground"
            android:src="@drawable/delete" />

        <ImageButton
            android:id="@+id/share"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/colorBackground"
            android:src="@drawable/share" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/method_processing_selector"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/area_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/gaussian_blur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:background="?android:attr/colorBackground"
            android:button="@drawable/blur_on" />

        <RadioButton
            android:id="@+id/black_and_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:background="?android:attr/colorBackground"
            android:button="@drawable/contrast" />

        <RadioButton
            android:id="@+id/single_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:background="?android:attr/colorBackground"
            android:button="@drawable/format_color_fillx" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/area_selector"
        android:layout_width="360dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/finger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:background="?android:attr/colorBackground"
                android:button="@drawable/edit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/freeform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:background="?android:attr/colorBackground"
                android:button="@drawable/texture" />
        </LinearLayout>

    </RadioGroup>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:max="100"
        android:progress="5"
        app:layout_constraintBottom_toTopOf="@+id/method_processing_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/colors"
        android:layout_width="360dp"
        android:layout_height="46dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <RadioButton
            android:id="@+id/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="b" />

        <RadioButton
            android:id="@+id/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="r" />

        <RadioButton
            android:id="@+id/yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="y" />

        <RadioButton
            android:id="@+id/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="g" />

        <RadioButton
            android:id="@+id/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="b" />

        <RadioButton
            android:id="@+id/purple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="p" />

        <RadioButton
            android:id="@+id/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="w" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>